[workspace]
members = [
    "arith", # definitions of Field, Extensions, SIMDS
    "arith/gf2",    
    "arith/gf2_128",
    "arith/goldilocks",
    "arith/mersenne31",
    "arith/polynomials",
    "bi-kzg", 
    "circuit", 
    "config", 
    "gkr", 
    "pcs",
    "sumcheck",
    "transcript",
    "tree"
]
resolver = "2"


[workspace.dependencies]
ark-std = "0.4"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4" }
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11.3"
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }
itertools = "0.13"
log = "0.4"
mpi = "0.8.0"
rand = "0.8.5"
rayon = "1.10"
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = [ "sha3" ] }
tokio = { version = "1.38.0", features = ["full"] }
tynm = { version = "0.1.6", default-features = false }
warp = "0.3.7"
thiserror = "1.0.63"
ethnum = "1.5.0"
