[workspace]
members = [
    "arith", # definitions of Field, Extensions, SIMDS
    "arith/babybear",
    "arith/field_hashers",
    "arith/gf2",
    "arith/gf2_128",
    "arith/goldilocks",
    "arith/mersenne31",
    "arith/polynomials",
    "bi-kzg",
    "circuit",
    "config_macros", # proc macros used to declare a new config, this has to a separate crate due to rust compilation issues
    "gkr",
    "gkr_engine", # definitions of GKR engine and associated types
    "hasher", # definitions of FiatShamirFieldHasher, FiatShamirBytesHash, and associated types
    "poly_commit",
    "serdes", # serialization and deserialization of various data structures
    "sumcheck",
    "crosslayer_prototype",
    "transcript", # instantiations of transcripts
    "tree",
    "utils",
]
resolver = "2"

[workspace.dependencies]
ark-std = "0.4"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4" }
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11.3"
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }
syn = "2.0"       # For parsing Rust code
quote = "1.0"     # For generating code
proc-macro2 = "1.0"  # For working with tokens
itertools = "0.13"
log = "0.4"
mpi = "0.8.0"
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3" }
p3-field = { git = "https://github.com/Plonky3/Plonky3" }
rand = "0.8.5"
rayon = "1.10"
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = [ "sha3", "keccak" ] }
tokio = { version = "1.38.0", features = ["full"] }
tynm = { version = "0.1.6", default-features = false }
warp = "0.3.7"
thiserror = "1.0.63"
ethnum = "1.5.0"
rand_chacha = "0.3.1"
derivative = "2.2.0"
