[package]
name = "arith"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std.workspace = true
criterion.workspace = true
ethnum.workspace = true
itertools.workspace = true
halo2curves.workspace = true
log.workspace = true
rand.workspace = true
tynm.workspace = true

serdes = { path = "../serdes" }

[features]
halo2_asm = [ "halo2curves/asm" ]

[[bench]]
name = "fr"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "utils"
harness = false
