[package]
name = "arith"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
ark-bn254.workspace = true
criterion.workspace = true
ethnum.workspace = true
itertools.workspace = true
log.workspace = true
tynm.workspace = true

serdes = { path = "../serdes" }

[[bench]]
name = "fr"
harness = false

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "utils"
harness = false
