[package]
name = "bi-kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std.workspace = true
clap.workspace = true
halo2curves.workspace = true
log.workspace = true
rand.workspace = true
rayon.workspace = true
sha2.workspace = true

[dev-dependencies]
criterion.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true

[[bench]]
name = "bi_kzg_bench"
harness = false


[features]
default = [ 
    "ark-ec/parallel",
    ]