[package]
name = "circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
gkr_engine = { path = "../gkr_engine" }
serdes = { path = "../serdes" }
transcript = { path = "../transcript" }

ark-std.workspace = true
ethnum.workspace = true
log.workspace = true
rand.workspace = true
thiserror.workspace = true