[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
gkr_field_config = { path = "./gkr_field_config"}
mersenne31 = { path = "../arith/mersenne31" }
mpi_config = { path = "./mpi_config" }
polynomial_commitment_scheme = { path = "../polynomial_commitment_scheme" }
transcript = { path = "../transcript" }


ark-std.workspace = true
halo2curves.workspace = true
mpi.workspace = true

[features]
default = []
# default = [ "grinding" ]
grinding = []
