[package]
name = "crosslayer_prototype"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
gkr_engine = { path = "../gkr_engine" }
gkr_hashers = { path = "../hasher" }
polynomials = { path = "../arith/polynomials" }
sumcheck = { path = "../sumcheck" }
serdes = { path = "../serdes" }
transcript = { path = "../transcript" }

env_logger.workspace = true
ethnum.workspace = true
log.workspace = true
rand.workspace = true
thiserror.workspace = true
