[package]
name = "gkr"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
babybear = { path = "../arith/babybear" }
config_macros = { path = "../config_macros" }
circuit = { path = "../circuit" }
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
gkr_engine = { path = "../gkr_engine" }
gkr_hashers = { path = "../hasher" }
goldilocks = { path = "../arith/goldilocks" }
gpu = { path = "../gpu" }
mersenne31 = { path = "../arith/mersenne31" }
poly_commit = { path = "../poly_commit" }
polynomials = { path = "../arith/polynomials" }
serdes = { path = "../serdes" }
sumcheck = { path = "../sumcheck" }
transcript = { path = "../transcript" }
utils = { path = "../utils" }

ark-std.workspace = true
env_logger.workspace = true
ethnum.workspace = true
halo2curves.workspace = true
log.workspace = true
mpi.workspace = true
rand.workspace = true
rayon.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
# default = [ "grinding" ]
grinding = [ ]
recursion = [ "transcript/recursion" ]
profile = [ "utils/profile", "sumcheck/profile" ]

[[bench]]
name = "gkr-hashes"
harness = false
path = "benches/gkr_hashes.rs"

