[package]
name = "gkr"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
babybear = { path = "../arith/babybear", optional = true }
config_macros = { path = "../config_macros" }
circuit = { path = "../circuit" }
gf2 = { path = "../arith/gf2", optional = true }
gf2_128 = { path = "../arith/gf2_128", optional = true }
gkr_engine = { path = "../gkr_engine", default-features = false }
gkr_hashers = { path = "../hasher" }
goldilocks = { path = "../arith/goldilocks", optional = true }
mersenne31 = { path = "../arith/mersenne31", optional = true }
poly_commit = { path = "../poly_commit" }
polynomials = { path = "../arith/polynomials" }
serdes = { path = "../serdes" }
sumcheck = { path = "../sumcheck" }
transcript = { path = "../transcript" }
utils = { path = "../utils" }

ark-std.workspace = true
env_logger.workspace = true
ethnum.workspace = true
halo2curves.workspace = true
log.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = ["parallel", "all_fields"]
parallel = ["rayon", "sumcheck/parallel", "poly_commit/parallel"]
all_fields = [
    "babybear", "gf2", "gf2_128", "goldilocks", "mersenne31",
    "gkr_engine/all_fields",
]
grinding = [ ]
recursion = [ "transcript/recursion" ]
profile = [ "utils/profile", "sumcheck/profile" ]

[[bench]]
name = "gkr-hashes"
harness = false
path = "benches/gkr_hashes.rs"

