[package]
name = "gkr_engine"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
babybear = { path = "../arith/babybear" }
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
goldilocks = { path = "../arith/goldilocks" }
mersenne31 = { path = "../arith/mersenne31" }
polynomials = { path = "../arith/polynomials"}
serdes = { path = "../serdes" }

thiserror.workspace = true
rand.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-std.workspace = true

[features]
default = []
recursion = []
# grinding = [ "grinding" ]