[package]
name = "gkr_engine"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
babybear = { path = "../arith/babybear", optional = true }
gf2 = { path = "../arith/gf2", optional = true }
gf2_128 = { path = "../arith/gf2_128", optional = true }
goldilocks = { path = "../arith/goldilocks", optional = true }
mersenne31 = { path = "../arith/mersenne31", optional = true }
polynomials = { path = "../arith/polynomials"}
serdes = { path = "../serdes" }

thiserror.workspace = true
rand.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-std.workspace = true

[features]
default = ["all_fields"]
all_fields = ["babybear", "gf2", "gf2_128", "goldilocks", "mersenne31"]
recursion = []
# grinding = [ "grinding" ]