[package]
name = "gkr_iop"
version = "0.1.0"
edition = "2024"

[dependencies]
arith = { path = "../arith" }
circuit = { path = "../circuit" }
gkr_engine = { path = "../gkr_engine" }
serdes = { path = "../serdes" }
sumcheck = { path = "../sumcheck" }
utils = { path = "../utils" }

ark-std.workspace = true
log.workspace = true
