[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
mersenne31 = { path = "../arith/mersenne31" }

ark-std.workspace = true
rand.workspace = true

sha2.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poseidon"
harness = false
