[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
polynomials = { path = "../arith/polynomials"}
tree = { path = "../tree" }
transcript = { path = "../transcript" }

rand.workspace = true
ark-std.workspace = true
thiserror.workspace = true

[dev-dependencies]
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
mersenne31 = { path = "../arith/mersenne31" }

tynm.workspace = true
criterion.workspace = true

[[bench]]
name = "orion"
harness = false
