[package]
name = "poly_commit"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
gf2 = { path = "../arith/gf2" }
gkr_engine = { path = "../gkr_engine" }
goldilocks = { path = "../arith/goldilocks" }
polynomials = { path = "../arith/polynomials"}
serdes = { path = "../serdes" }
transcript = { path = "../transcript" }
tree = { path = "../tree" }
utils = { path = "../utils" }
sumcheck = { path = "../sumcheck" }

ethnum.workspace = true
ark-std.workspace = true
derivative.workspace = true
halo2curves.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
spongefish.workspace = true
spongefish-pow.workspace = true
transpose.workspace = true
thiserror.workspace = true
whir.workspace = true

[dev-dependencies]
gf2_128 = { path = "../arith/gf2_128" }
mersenne31 = { path = "../arith/mersenne31" }
goldilocks = { path = "../arith/goldilocks" }
gkr_hashers = { path = "../hasher" }

tynm.workspace = true
criterion.workspace = true

[[bench]]
name = "orion"
harness = false

[[bench]]
name = "hyrax"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "pcs_all"
harness = false

[features]
# default = [ ]
default = [ "profile" ]
profile = [ "utils/profile" ]