[package]
name = "poseidon"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
mersenne31 = { path = "../arith/mersenne31" }
babybear = { path = "../arith/babybear" }

ark-std.workspace = true
rand.workspace = true
rayon.workspace = true


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "poseidon"
harness = false

[features]
default = ["ark-std/print-trace"]