[package]
name = "serdes"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec.workspace = true
ark-std.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ethnum.workspace = true
thiserror.workspace = true

wasm-bindgen = "0.2"

serdes_derive = { path = "../serdes_derive" }

[dev-dependencies]
# rand.workspace = true


