[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
circuit = { path = "../circuit" }
gkr_engine = { path = "../gkr_engine" }
gkr_hashers = { path = "../hasher" }
polynomials = { path = "../arith/polynomials" }
serdes = { path = "../serdes" }
transcript = { path = "../transcript" }
utils = { path = "../utils" }

ark-std.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true

[dev-dependencies]


[features]
profile = [ "utils/profile" ]
