[package]
name = "sumcheck"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
circuit = { path = "../circuit" }
gkr_engine = { path = "../gkr_engine" }
gkr_hashers = { path = "../hasher" }
polynomials = { path = "../arith/polynomials" }
serdes = { path = "../serdes" }
transcript = { path = "../transcript" }
utils = { path = "../utils" }

env_logger.workspace = true
log.workspace = true
rayon = { workspace = true, optional = true }

[dev-dependencies]
ark-std.workspace = true


[features]
default = ["parallel"]
parallel = ["rayon"]
profile = [ "utils/profile" ]
