[package]
name = "transcript"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
mpi_config = { path = "../config/mpi_config" }
serdes = { path = "../serdes" }

sha2.workspace = true
tiny-keccak.workspace = true
halo2curves.workspace = true

[dev-dependencies]
mersenne31 = { path = "../arith/mersenne31/" }

[features]
recursion = []