[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../arith" }
serdes = { path = "../serdes" }

# babybear = { path = "../arith/babybear" }
# poseidon = { path = "../poseidon" }

ark-std.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
criterion.workspace = true
gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }
tynm.workspace = true

# p3-baby-bear.workspace = true
# p3-field.workspace = true
# p3-monty-31.workspace = true

[[bench]]
name = "tree"
harness = false
