[package]
name = "tree"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../arith" }
serdes = { path = "../serdes" }

ark-std.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
criterion.workspace = true
tynm.workspace = true

gf2 = { path = "../arith/gf2" }
gf2_128 = { path = "../arith/gf2_128" }

[[bench]]
name = "tree"
harness = false
