[package]
name = "uni-kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std.workspace = true
halo2curves.workspace = true
log.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true
sha2.workspace = true

arith = { path = "../arith" }

[dev-dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
criterion.workspace = true