[package]
name = "babybear"
version.workspace = true
edition.workspace = true

[dependencies]

arith = { path = ".." }
serdes = { path = "../../serdes" }

ark-std.workspace = true
ethnum.workspace = true
rand.workspace = true


[[bench]]
name = "babybear"
harness = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false }