[package]
name = "field_hashers"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../" }
serdes = { path = "../../serdes" }

tiny-keccak.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
halo2curves = { workspace = true, features = [ "asm" ] }
[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
halo2curves.workspace = true
