[package]
name = "gf2"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../" }

ark-std.workspace = true
halo2curves.workspace = true
log.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
ethnum.workspace = true

raw-cpuid = "11.1.0"
cfg-if = "1.0"


[dev-dependencies]
tynm.workspace = true
criterion.workspace = true

[[bench]]
name = "gf2"
harness = false