[package]
name = "gf2_128"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = "../" }
gf2 ={ path = "../gf2" }
serdes = { path = "../../serdes" }

ark-std.workspace = true
ethnum.workspace = true
rand.workspace = true

[dev-dependencies]
tynm.workspace = true
criterion.workspace = true

[[bench]]
name = "gf2_128"
harness = false