[package]
name = "goldilocks"
version = "0.1.0"
edition = "2021"

[dependencies]
arith = { path = ".." }
serdes = { path = "../../serdes" }

ark-ff.workspace = true
ark-std.workspace = true
ethnum.workspace = true
rand.workspace = true
whir.workspace = true

[[bench]]
name = "goldilocks"
harness = false

[dev-dependencies]
criterion = "0.5"
