[package]
name = "goldilocks"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = ".." }
serdes = { path = "../../serdes" }

ark-std.workspace = true
ethnum.workspace = true
rand.workspace = true

[[bench]]
name = "goldilocks"
harness = false

[dev-dependencies]
criterion = "0.5"
