[package]
name = "mersenne31"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../" }
gkr_hashers = { path = "../../hasher" }
serdes = { path = "../../serdes" }

ark-std.workspace = true
halo2curves.workspace = true
log.workspace = true
rand.workspace = true
thiserror.workspace = true
ethnum.workspace = true

raw-cpuid = "11.1.0"
cfg-if = "1.0"


[dev-dependencies]
tynm.workspace = true
criterion.workspace = true

[[bench]]
name = "m31"
harness = false