# Credit: https://github.com/supranational/sppark/tree/main/poc/msm-cuda
# Major changes: add wrappers&tests for the bn254 field in halo2

[package]
name = "msm_cuda"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = ["bn254"]
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
bn254 = ["ark-bn254/curve"]
bls12_377 = ["ark-bls12-377/curve"]
bls12_381 = ["ark-bls12-381/curve"]
quiet = []
cuda-mobile = []

# TODO: Switch to workspace dependencies and fix arkworks inconsistency caused by upgrade
[dependencies]
blst = "~0.3.11"
# sppark = { git = "https://github.com/supranational/sppark.git", rev = "9cd5cbd310433665a9e8c26837355cb41ca88b06" }
sppark = { path = "../../../../softwares/sppark/rust"}
rand = "0.8"
rand_chacha = "0.3"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = { version = "0.3.0", optional = true }
ark-bls12-377 = { version = "0.3.0", optional = true }
ark-bn254 = { version = "0.3.0", optional = true }
num-bigint = "0.4.6"
rayon = "1.11.0"

halo2curves.workspace = true
utils = { path = "../../utils" }

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }

[[bench]]
name = "msm"
harness = false

[[bench]]
name = "msm_halo2"
harness = false
