[package]
name = "polynomials"
version.workspace = true
edition.workspace = true

[dependencies]
arith = { path = "../" }
serdes = { path = "../../serdes" }

ark-std.workspace = true
criterion.workspace = true
halo2curves.workspace = true
rand.workspace = true
itertools.workspace = true

[[bench]]
name = "mle_eval"
harness = false

